plugins {
    id 'java'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
}

// Project properties from gradle.properties
def minecraftVersion = project.property('minecraft_version')
def forgeVersion = project.property('forge_version')
def mapping_channel = project.property('mapping_channel')
def mapping_version = project.property('mapping_version')

version = project.property('mod_version')
group = project.property('mod_group_id')
def mod_id = project.property('mod_id')

base {
    archivesName = mod_id
}

// Java toolchain to 17
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

println "Java: ${System.getProperty('java.version')}, JVM: ${System.getProperty('java.vm.version')} (${System.getProperty('java.vendor')}), Arch: ${System.getProperty('os.arch')}"

minecraft {
    // The mappings can be changed at any time and must be in the following format.
    // Channel:   Version:
    // official   MCVersion             Official field/method names from Mojang mapping files
    // parchment  YYYY.MM.DD-MCVersion  Open community-sourced parameter names and javadocs layered on top of official
    //
    // You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
    // See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
    //
    // Parchment is an unofficial project maintained by ParchmentMC, separate from MinecraftForge
    // Additional setup is needed to use their mappings: https://parchmentmc.org/docs/getting-started
    //
    // Use non-default mappings at your own risk. They may not always work.
    // Simply re-run your setup task after changing the mappings to update your workspace.
    mappings channel: mapping_channel, version: mapping_version

    // When true, this property will have all Eclipse/IntelliJ IDEA run configurations run the "prepareX" task for the given run configuration before launching the game.
    // In most cases, it is not necessary to enable.
    // enableEclipsePrepareRuns = true
    // enableIdeaPrepareRuns = true

    // This property allows configuring Gradle's ProcessResources task(s) to run on IDE output locations before launching the game.
    // It is REQUIRED to be set to true for this template to function.
    // See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
    copyIdeResources = true

    // When true, this property will add the folder name of all declared run configurations to generated IDE run configurations.
    // The folder name can be set on a run configuration using the "folderName" property.
    // By default, the folder name of a run configuration is the name of the Gradle project containing it.
    // generateRunFolders = true

    // This property enables access transformers for use in development.
    // They will be applied to the Minecraft artifact.
    // The access transformer file can be anywhere in the project.
    // However, it must be at "META-INF/accesstransformer.cfg" in the final mod jar to be loaded by Forge.
    // This default location is a best practice to automatically put the file in the right place in the final jar.
    // See https://docs.minecraftforge.net/en/latest/advanced/accesstransformers/ for more information.
    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations; keep consistent with modern TF/Forge setups
    runs {
        all {
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', mod_id

            // mixin refmap remapping file used when running under remapped environment
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "$projectDir/build/createSrgToMcp/output.srg"

            jvmArgs '-Xmx4G', '-Xms4G',
                '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
                '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
                '--add-opens=java.base/java.lang=ALL-UNNAMED',
                '--add-opens=java.base/java.nio=ALL-UNNAMED'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                    source sourceSets.test
                }
            }
        }

        client {
            workingDirectory project.file('run/client')
        }

        server {
            workingDirectory project.file('run/server')
            args '--nogui'
        }

        gameTestServer {
            workingDirectory project.file('run/gametest')
            args '--nogui'
        }

        data {
            workingDirectory project.file('run/data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    maven { url 'https://maven.blamejared.com' }
    maven { url 'https://www.cursemaven.com' }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraftVersion}-${forgeVersion}"

    // Needed to generate the mixin refmap (required outside the dev environment).
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    def tfcEnabled = project.hasProperty('tfc_enabled') && project.property('tfc_enabled').toString().toBoolean()
    if (tfcEnabled) {
        compileOnly fg.deobf('vazkii.patchouli:Patchouli:1.20.1-81-FORGE')
        runtimeOnly fg.deobf('vazkii.patchouli:Patchouli:1.20.1-81-FORGE')

        implementation fg.deobf("curse.maven:terrafirmacraft-302973:7442504")

        implementation fg.deobf("curse.maven:afc-877545:7200580")
    }
}

// Process resources and expand properties similar to TF/C pattern
tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            minecraft_version: project.property('minecraft_version'),
            minecraft_version_range: project.property('minecraft_version_range'),
            forge_version: project.property('forge_version'),
            forge_version_range: project.property('forge_version_range'),
            loader_version_range: project.property('loader_version_range'),
            mod_id: project.property('mod_id'),
            mod_name: project.property('mod_name'),
            mod_license: project.property('mod_license'),
            mod_version: project.property('mod_version'),
            mod_authors: project.property('mod_authors'),
            mod_description: project.property('mod_description')
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes(
                'Specification-Title': project.property('mod_id'),
                'Specification-Vendor': project.property('mod_authors'),
                'Specification-Version': '1',
                'Implementation-Title': project.name,
                'Implementation-Version': archiveVersion,
                'Implementation-Vendor': project.property('mod_authors'),
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                // Required for mixins to load outside the dev run configs.
                'MixinConfigs': "${mod_id}.mixins.json"
        )
    }

    finalizedBy 'reobfJar'
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
